--- a/_config.yml
+++ b/_config.yml
@@ -45,6 +45,8 @@ defaults:
 collections:
   projects:
     output: true
+
+google_analytics: G-JCSB0SBNQE
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
