set g4a measurement id

--- a/_config.yml
+++ b/_config.yml
@@ -45,8 +45,7 @@ defaults:
 collections:
   projects:
     output: true
-
-google_analytics: G-JCSB0SBNQE
+google_analytics: G-ZRD25PHRLE
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
